# ytcue

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: diagnostics.md  heuristics.md  musicbee.md  usage.md
src/ytcue/: __init__.py
src/ytcue/cli/: comments.py  desc.py  parser.py  query.py
src/ytcue/cli/ytcue/: auto.py  batch.py  main.py
src/ytcue/core/: comments.py  cue.py  diagnostics.py  heuristics.py  metadata.py  models.py  parser.py  youtube.py
src/ytdesc2cue/: __init__.py  auto.py  batch.py  cli.py  comments.py  cue.py  desc.py  heuristics.py  metadata.py  models.py  parser.py  youtube.py  ytcue.py
tests/: test_cli.py  test_comments.py  test_cue.py  test_diagnostics.py  test_heuristics.py  test_metadata.py  test_multi_path.py  test_parser.py  test_timestamps.py
