[project]
name = "ytcue"
version = "0.1.0"
description = "Convert YouTube descriptions into MusicBee-compatible CUE sheets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp",
    "tinytag",
    "mutagen",
]

[project.scripts]
ytcue-parse = "ytcue.cli.parser:main"
ytdesc = "ytcue.cli.desc:main"
ytcomments = "ytcue.cli.comments:main"
ytaudio-query = "ytcue.cli.query:main"
ytcue = "ytcue.cli.ytcue.main:main"
ytcue-batch = "ytcue.cli.ytcue.batch:main"
ytcue-auto = "ytcue.cli.ytcue.auto:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
