[project]
name = "ytcue"
version = "0.1.0"
description = "Convert YouTube descriptions into MusicBee-compatible CUE sheets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp",
    "tinytag",
    "mutagen",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.9.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ytcue-parse = "ytcue.cli.parser:main"
ytdesc = "ytcue.cli.desc:main"
ytcomments = "ytcue.cli.comments:main"
ytaudio-query = "ytcue.cli.query:main"
ytcue = "ytcue.cli.ytcue.main:main"
ytcue-batch = "ytcue.cli.ytcue.batch:main"
ytcue-auto = "ytcue.cli.ytcue.auto:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/ytcue --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.9.0",
    "pytest-cov>=4.1.0",
]
